# UsbAudioBridge

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  debug.keystore  mic_source.patch  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio/: aaudio_engine.cpp  aaudio_engine.h  audio_common.h  java_audio_track_engine.cpp  java_audio_track_engine.h  opensl_engine.cpp  opensl_engine.h  ring_buffer.h
app/src/main/cpp/core/: bridge.cpp  bridge.h
app/src/main/cpp/logging/: logging.cpp  logging.h
app/src/main/cpp/tinyalsa/doxygen/: mainpage.h
app/src/main/cpp/tinyalsa/include/tinyalsa/: interval.h  limits.h  mixer.h  pcm.h  plugin.h  version.h
app/src/main/cpp/tinyalsa/src/: mixer_io.h  pcm_io.h  snd_card_plugin.h
app/src/main/cpp/tinyalsa/tests/include/: pcm_test_device.h
app/src/main/cpp/tinyalsa/utils/: optparse.h
app/src/main/java/com/flopster101/usbaudiobridge/: AboutScreen.kt  AppNavigation.kt  AudioService.kt  HomeScreen.kt  MainActivity.kt  MainUiState.kt  NoRootScreen.kt  PlaybackDeviceHelper.kt  (+5 more)
app/src/main/res/drawable/: ic_copy.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_mic.xml  ic_mic_off.xml  ic_playback_bluetooth.xml  ic_playback_headphones.xml  ic_playback_speaker.xml  ic_usb.xml  ic_volume_off.xml  ic_volume_up.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
